--- a/style.css
+++ b/style.css
@@ -1,5 +1,55 @@
 @import url('https://fonts.googleapis.com/css2? family= Roboto:ital,wght@0,100;0,300;1,100;1,300 & display=swap');
-
+header{
+	font-family: raboto;
+}
+#menu{
+		background-color:rgba(255,255,255,0);
+	border:none;
+	box-shadow: none;
+	margin-bottom: 8px;
+}
+.Prolub{
+	text-decoration: none;
+	color: black;
+}
+.Leclerc{
+	text-decoration: none;
+	color: black;
+}
+header nav{
+	 margin: 0;
+	 padding: 0;
+	 top: 20%;
+	 margin-top:-4em;
+}
+header nav ul{
+	list-style: none;
+	margin:0;
+	padding:0;
+}
+header nav ul li{
+	margin: 0;
+	padding:0;
+	float: left;
+	width: 330px;
+	height: 40px;
+	background: linear-gradient(#667359,white);
+	line-height: 40px;
+}
+header nav ul li a{
+	display: block;
+}
+header nav ul li ul li{
+	display: none;
+}
+header nav ul li a:hover{
+	background-color: rgba(255,255,255,0.5);
+	transition: 0.5s;
+}
+header nav ul li:hover ul li{
+	display: block;
+	transition: 0.7s;
+}
 body{
 	background-image: url(https://images.unsplash.com/photo-1612350445587-ee65a2cc6288?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1949&q=80);
 	background-attachment: fixed;
@@ -7,7 +57,7 @@ body{
 }
 div{
 	width: 90%;
-	margin: 24px auto;
+	margin: 40px auto;
 	padding: 24px 48px;
 	background-color: rgba(255,255,255,0.7);
 	border:1px solid rgb(102, 115, 89) ;
@@ -20,7 +70,7 @@ h1{
 	font-family: roboto;
 }
 img {
-     border : 2px solid #000000;
+     border : 1px solid #000000;
      border-radius: 50%;
      box-shadow:5px 5px 5px 0 rgba(0,0,0,0.8);
 }
@@ -29,6 +79,7 @@ h2{
 	font-size: 25px;
 	font-family: roboto;
 	font-weight: 200;
+	text-decoration: underline;
 }
 a{
 	text-decoration: none;
@@ -75,14 +126,14 @@ ul{
 }
 .button_INST{
 	padding: 10px;
-	background-color:rgb(255, 108, 66);
+	background-color: rgb(255, 108, 66);
 	border-radius: 7px;
 	color:white;
 	border:solid 1px rgb(255, 108, 66);
 }
 .button_INST:hover{
-	background-color: white;
-	color:rgb(255, 108, 66);
+	background-color:white;
+	color: rgb(255, 108, 66);
 	transition: 0.5s;
 }
 #introduction-text{
@@ -92,9 +143,6 @@ ul{
 	background-color:rgba(255,255,255,0);
 	border:none;
 	box-shadow: none;
-}
-.la-reunion{
-
 }
 .Follow{
 	color:white;
