--- a/style.css
+++ b/style.css
@@ -16,6 +16,18 @@ header{
 	text-decoration: none;
 	color: black;
 }
+.Australie{
+	text-decoration: none;
+	color: black;
+}
+.chine{
+	text-decoration: none;
+	color: black;
+}
+.singapour{
+	text-decoration: none;
+	color:black;
+}
 header nav{
 	 margin: 0;
 	 padding: 0;
